...
    private let avatarImageView = UIImageView()
    private let profileService = ProfileService.shared
    private let alertManager = Alert.shared
    
    private let logoutButton: UIButton = {
        let button = UIButton()
        let image = UIImage(named: "logout_button")
        button.accessibilityIdentifier = "logout_button"
        button.setImage(image, for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()
    
...
